[package]
name = "sayve-prefund"
version = "1.0.0"
authors = ["solomon"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
